--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run build:theme:css",
+    "build:theme:css": "tailwindcss -i ./src/index.css -o ./wp-theme/daniele-manca-digital/assets/css/theme.css --minify",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
     "lucide-react": "^0.563.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
